import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'org.springdoc.openapi-gradle-plugin' version '1.9.0'
    id 'com.diffplug.spotless' version '8.9.0'
    id 'checkstyle'
}

group = 'com.poudy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    springdocVersion = '3.1.0'
    awsSdkVersion = '2.41.33'
    openApiDocPort = 8099
    // Exec 는 PATH 에서 실행 파일을 그대로 찾아 Windows 에서 'npx' 를 찾지 못한다.
    isWindows = System.getProperty('os.name').toLowerCase().contains('windows')
}

dependencies {
    implementation platform(SpringBootPlugin.BOM_COORDINATES)
    implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")

    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
    implementation 'software.amazon.awssdk:s3'

    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
}

spotless {
    java {
        target 'src/**/*.java'

        removeUnusedImports()

        // '\\#' 가 static import 다.
        importOrder('\\#', '')

        eclipse().configFile(rootProject.file('config/formatter.xml'))

        // 포매터가 줄 끝 공백을 남기므로 뒤에 둔다.
        trimTrailingWhitespace()
        endWithNewline()
    }
}

checkstyle {
    toolVersion = '13.9.0'
    configFile = file('config/checkstyle/checkstyle.xml')
    maxWarnings = 0
}

tasks.named('jar') {
    enabled = false
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

// JDK 없이도 등록할 수 있도록 스크립트를 원본으로 두고 위임만 한다.
tasks.register('setupGit', Exec) {
    group = 'build setup'
    description = 'Installs repository Git hooks and commit message template'
    workingDir = rootProject.projectDir
    commandLine 'sh', '../setup-git.sh'
    onlyIf { rootProject.file('../.git').exists() && System.getenv('CI') == null }
}

// 전용 포트를 쓴다. 8080 이면 개발 중 띄워둔 앱의 응답을 받아 낡은 문서가 조용히 커밋된다.
// outputDir 을 프로젝트 루트로 두면 server/ 전체가 이 태스크의 출력이 되어 그 아래를 읽는
// 태스크가 전부 의존성 미선언으로 잡힌다. build 아래에 뽑고 copyOpenApiDoc 이 옮긴다.
openApi {
    outputDir = layout.buildDirectory.dir('openapi')
    outputFileName = 'openapi.json'
    apiDocsUrl = "http://localhost:${openApiDocPort}/v3/api-docs"
    customBootRun {
        args = ["--server.port=${openApiDocPort}"]
        classpath.from(sourceSets.test.runtimeClasspath)
    }
}

// 출력을 파일 하나로 선언한다. 디렉터리로 두면 위와 같은 문제가 다시 생긴다.
tasks.register('copyOpenApiDoc') {
    group = 'openapi'
    description = 'Copies the generated OpenAPI document into the repository'
    dependsOn 'generateOpenApiDocs'

    def source = layout.buildDirectory.file('openapi/openapi.json')
    def target = layout.projectDirectory.file('openapi.json')

    inputs.file(source)
    outputs.file(target)

    // OS 와 무관하게 LF 로 저장하고, 마지막 개행이 없으면 한 줄을 더한다.
    doLast {
        def bytes = source.get().asFile.getText('UTF-8')
                .replace('\r\n', '\n')
                .replace('\r', '\n')
                .getBytes('UTF-8')
        target.asFile.withOutputStream { out ->
            out.write(bytes)
            if (bytes.length == 0 || bytes[bytes.length - 1] != (byte) 10) {
                out.write(10)
            }
        }
    }
}

// 포크된 앱은 Gradle 이 도는 JVM 을 쓴다. 기본 JDK 가 21 보다 낮으면 기동에 실패하는데
// 플러그인은 "30초 기다렸다"는 메시지만 남긴다. 컴파일과 같은 툴체인을 쓰게 한다.
tasks.named('forkedSpringBootRun') {
    dependsOn tasks.named('testClasses')
    javaLauncher = javaToolchains.launcherFor(java.toolchain)
}

// api.zod.ts 가 api.zod.types.d.ts 를 import 하므로 둘 다 커밋한다.
tasks.register('generateApiZod', Exec) {
    group = 'openapi'
    description = 'Generates zod schemas from openapi.json'
    dependsOn 'copyOpenApiDoc'

    def output = rootProject.file('../common/api.zod.ts')
    def declarations = rootProject.file('../common/api.zod.types.d.ts')
    def source = layout.projectDirectory.file('openapi.json')

    inputs.file(source)
    outputs.files(output, declarations)

    doFirst {
        output.parentFile.mkdirs()
    }
    commandLine isWindows ? 'npx.cmd' : 'npx', '--yes', 'typed-openapi@3.2.1',
            source.asFile.absolutePath,
            '-r', 'zod', '--schemas-only', '-o', output.absolutePath

    // 손으로 고치면 다음 생성 때 되돌아가므로 생성 단계에 붙인다.
    doLast {
        // z.iso.datetime() 은 오프셋을 거부한다. 서버는 OffsetDateTime 을 +09:00 로 내보낸다.
        output.text = tidy(output.text.replace('z.iso.datetime()', 'z.iso.datetime({ offset: true })'), false)

        // api.zod.ts 의 // @ts-nocheck 는 지우면 타입 검사가 깨지므로 건드리지 않는다.
        declarations.text = tidy(declarations.text, true)
    }
}

// 줄 끝 공백과 주석을 걷어내면 그 자리에 빈 줄이 남는다. 연속된 빈 줄은 하나로 줄이고
// 파일 앞뒤의 빈 줄은 없앤다.
def tidy(String text, boolean dropComments) {
    def lines = text.readLines()
            .findAll { !dropComments || !it.trim().startsWith('//') }
            .collect { it.replaceFirst(/\s+$/, '') }

    def collapsed = []
    lines.each { line ->
        if (line.isEmpty() && (collapsed.isEmpty() || collapsed.last().isEmpty())) {
            return
        }
        collapsed << line
    }
    while (!collapsed.isEmpty() && collapsed.last().isEmpty()) {
        collapsed.removeLast()
    }

    return collapsed.join('\n') + '\n'
}

tasks.register('generateApiArtifacts') {
    group = 'openapi'
    description = 'Generates every artifact the frontend consumes'
    dependsOn 'generateApiZod'
}
